# model-compression

./: Compression_HW6.ipynb  LeNet_to_onnx_to_openvino.ipynb  README.md  clustering_compression.ipynb  knowledge_distillation.ipynb  models.py  pyproject.toml  testing.py  training.py  utils.py  Компрессия_дз1.ipynb  Компрессия_дз2.ipynb
