[tool.poetry]
name = "model-compression"
version = "0.1.0"
description = ""
authors = ["ViktorVlasov"]
readme = "README.md"
packages = [{include = "model_compression"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
torchvision = "^0.15.2"
scikit-learn = "^1.3.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
ipykernel = "^6.25.2"
tqdm = "^4.66.1"
ipywidgets = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
